# dirsort-rs

./: .gitignore  Cargo.toml  README.md  build.bat
src/: main.rs
