[package]
name = "dirsort-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
fs_extra = "1.3.0"
futures = "0.3.28"
tokio = { version = "1.31.0", features = ["full"] }
walkdir = "2.4.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for speed
strip = "symbols"

[profile.dev]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 0 

# set RUSTFLAGS=--remap-path-prefix %USERPROFILE%=[top-secret]
